--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Awesome Page</title>
+    <link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    Hello World!
+    <nav><div class="nav-item">Home</div><div class="nav-item">Chat</div><div class="nav-item">Habitat</div></nav>
+    <div class="col-left">
+     <table height="100%" width="100%" border="1">
+ <tr height="20%">
+     <td >Top</td>
+    </tr>
+    <tr>
+ <td height= "80%"">Bottom</td>
+</tr>
+     </table>
+    </div>
+    <div class="mainContent"></div>
 </body>
 </html>
